--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="app_name">LonelyTwitter</string>
     <string name="save">Save</string>
     <string name="clear">Clear</string>
-    
+    <string name="new_activity">New Activity</string>
+    <string name="title_activity_lonely_twitter_activity2">LonelyTwitterActivity2</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="tweet_counter">Tweets : </string>
+
 </resources>
